..F....... [ZBXNEXT-2662] fixes to ".overflow-ellipsis" th
git-svn-id: svn://svn.zabbix.com/branches/dev@54459 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBXNEXT-2662-6/sass/stylesheets/sass/screen.scss
+++ b/ZBXNEXT-2662-6/sass/stylesheets/sass/screen.scss
@@ -553,6 +553,7 @@ footer {
 		text-rendering: optimizeLegibility;
 		height: 100%;
 		overflow: hidden;
+		white-space: nowrap;
 	    padding: 8px 5px 7px 5px;
 	    vertical-align: bottom;
 	    border-bottom: 2px solid $table-border-color;
@@ -3063,6 +3064,12 @@ $browser-logos: (
 	cursor: move;
 }
 
+%overflow-ellipsis {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
 //.tick-icon {
 //	display: block;
 //  width: 24px;
@@ -3075,9 +3082,15 @@ $browser-logos: (
 .overflow-ellipsis {
 	table-layout: fixed;
 
-	th, td {
-		overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
+	td {
+		@extend %overflow-ellipsis;
+	}
+
+	th {
+		@extend %overflow-ellipsis;
+
+		a {
+			@extend %overflow-ellipsis;
+		}
 	}
 }
